Got the gulpfile, package.json, stylesheets, and scripts in order.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Lifestyles For Seniors
+Theme Name: Lifestyles For Seniors VERSION_NUMBER
 Theme URI: http://underscores.me/
 Author: Jimmy Pocock
 Author URI: http://www.jimmypocock.com
