--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,6 +47,19 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "mixins/mixins-master";
 
 /*--------------------------------------------------------------
+# Config
+--------------------------------------------------------------*/
+@import "config/background";
+@import "config/bootstrap-5-columns";
+@import "config/breakpoints";
+@import "config/button";
+@import "config/clearfix";
+@import "config/colors";
+@import "config/fonts";
+@import "config/rem-fallback";
+@import "config/style";
+
+/*--------------------------------------------------------------
 # Normalize
 --------------------------------------------------------------*/
 @import "normalize";
