--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,14 +49,17 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 /*--------------------------------------------------------------
 # Config
 --------------------------------------------------------------*/
+@import "config/colors";
+@import "config/fonts";
+
 @import "config/background";
 @import "config/bootstrap-5-columns";
 @import "config/breakpoints";
 @import "config/button";
 @import "config/clearfix";
-@import "config/colors";
-@import "config/fonts";
 @import "config/rem-fallback";
+
+@import "config/classes";
 @import "config/style";
 
 /*--------------------------------------------------------------
@@ -118,3 +121,18 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Media
 --------------------------------------------------------------*/
 @import "media/media";
+
+/*--------------------------------------------------------------
+# Header
+--------------------------------------------------------------*/
+@import "header/main";
+
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+@import "footer/main";
+
+/*--------------------------------------------------------------
+# Page
+--------------------------------------------------------------*/
+@import "page/main";
