--- a/sass/config/_style.scss
+++ b/sass/config/_style.scss
@@ -45,6 +45,10 @@ h1, h2, h3, h4, h5, h6, p {
   line-height: 1.4;
   margin: 0 auto;
 }
+h1 {
+  letter-spacing: 1px;
+  font-family: $next;
+}
 
 h2 {
   font-size: 1.5em;
