--- a/sass/header/_main.scss
+++ b/sass/header/_main.scss
@@ -41,11 +41,10 @@
   }
   .navbar {
     margin-bottom: 0;
-    @include rem-fallback(padding-top, 0.5);
     @include rem-fallback(padding-bottom, 0.5);
     .navbar-brand {
       height: 75px;
-      padding: 0;
+      padding: 0 0 0 15px;
       img {
         display: inline;
         height: 75px;
