--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Lifestyles For Seniors No Version Number Given
+Theme Name: Lifestyles For Seniors 0.0.2
 Theme URI: http://underscores.me/
 Author: Jimmy Pocock
 Author URI: http://www.jimmypocock.com
